change IDE suggestions